--- a/app.json
+++ b/app.json
@@ -13,12 +13,16 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes."
+
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes."
+
       },
       "edgeToEdgeEnabled": true
     },
